# FracAbility

./: .gitignore  .readthedocs.yaml  FracAbility_jupyter.ipynb  README.md  distr.csv  docs_requirements.txt  fracability_test.py  pyproject.toml  reliability_test.py  requirements.txt  requiremets.txt  setup.cfg  setup.py  survival_validation.py  test_reti.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: publish.yml
Paper/: Abstract.md  fracability.aux  fracability.bbl  fracability.bcf  fracability.blg  fracability.docx  fracability.dvi  fracability.run.xml  fracability.tex  fracability_templ.docx  scaletta.md
Paper/images/: frac_net.eps
development/: KM_reliability.py  analysis_output.csv  esf_plot.py  library_test.py  spacing_test.py
development/Basics/: export_data.py
development/Examples/: Pontrelli_bb_test.py  Pontrelli_surv_test.py  Pontrelli_test.py  Salsa_test.py  Salza_test.py  library_test (4th copy).py  spacing_Pontrelli_test.py  spacing_Salza_s1_test.py  spacing_Salza_s2_test.py
development/Examples/Basics/: 1. Import and plot.ipynb  2. Calculate topology.ipynb  3. Fitting a distribution.ipynb  4. Export data.ipynb  Calculate topology.ipynb  Export data.ipynb  Fitting a distribution.ipynb  Import and plot.ipynb  import_and_plot.py
development/Examples/Pontrelli/: Pontrelli_surv_test.py  Pontrelli_test.py
development/Examples/Salsa/: Salza_test.py
development/Shapefiles/Pontrelli_in/: Interpretation_boundary.shx
development/Shapefiles/Salza_in/: Set_2.qmd  Set_2.shx
development/Shapefiles/Test_fractures/: bounds.shp  bounds.shx  fractures.dbf  fractures.shp  fractures.shx
development/Spacing/: main.py  spacing.py
development/Survival_percentage_tests/: circle_test.py  space.py  survival_validation.py
development/local_documentation/: Glossary.html  Recommended resources.html  Theory reference.html  genindex.html  index.html  search.html
development/matlab/: ks_test.py  length_censoring.mlx  length_dist_S2.csv  length_dist_Set1.csv  ll_test.py
development/tests/: Fracture_net_Spacing_pontrelli.csv  Fractures_set1_out.csv  analysis_output.csv  data.csv  km_estimator.py  km_estimator_best.py  km_estimator_synth.py  stat_plotters_test.py  test_chi2.py
development/tests/Spacing/: spacing.py
docs/: Introduction to fracture network analysis.rst  Quickstart.rst  Recommended resources.rst  Theory reference.rst  Tutorial reference.rst  conf.py  index.rst  requirements.txt
docs/API/: Entities.rst  Statistic.rst  geometric_operations.rst
docs/Theory/: 1. Fracture networks.rst  2. Topology.rst  3. Statistical modelling.rst  4. Recommended resources.rst  5. Glossary.rst
docs/Tutorials/: 1. Basic tutorials.rst  1. Import and plot.rst  2. Advanced tutorials.rst  2. Calculate topology.rst  3. Fitting a distribution.rst  4. Export data.rst
docs/images/: logo_small_small.eps
fracability/: AbstractClasses.py  Adapters.py  Entities.py  Operations.py  Plotters.py  Representations.py  Statistics.py  __init__.py  clean_operations.py  geometric_operations.py  topology_operations.py
fracability/datasets/: Fracture_network.dbf  Fracture_network.shp  Fracture_network.shx  Fracture_network_test.dbf  Fracture_network_test.shp  Fracture_network_test.shx  Fracture_network_test2.dbf  Fracture_network_test2.shp  Fracture_network_test2.shx  Fracture_network_test3.qmd  Fracture_network_test3.shp  Fracture_network_test3.shx  Fracture_network_test4.dbf  Fracture_network_test4.shp  Fracture_network_test4.shx  Set_2.dbf  Set_2.shp_08-05-2023_14_37_09.txt  frac_pesce.dbf  frac_pesce.qmd  frac_pesce_nolen.dbf  frac_pesce_nolen.shx  grid_pesce.dbf  test1.dbf  test1.shp  test1.shx
fracability/examples/: data.py  example_fracture_network.py
fracability/operations/: Geometry.py  Statistics.py  Topology.py
fracability/tests/: test_entities.py  test_geometry.py  test_plotters.py  test_topology.py
fracability/utils/: general_use.py  shp_operations.py  statistics.py
matlab/: length_dist_S2.csv  length_dist_Set1.csv
paper_materials/: percentage_impact_pontrelli.py  percentage_impact_salza_s1.py  percentage_impact_salza_s2.py  percentage_impact_salza_spacing_s1.py  percentage_impact_salza_spacing_s2.py
paper_materials/Pontrelli/: Pontrelli_analysis.py
paper_materials/Salza/: Salza_analysis.py  spacing_Salza_s1_analysis.py  spacing_Salza_s2_analysis.py
src/: Boundary_gozo_result.csv  Fracture_net_gozo_result.csv  Fracture_net_test.csv  Fractures_all_fracture_out.csv  Fractures_gozo_result.csv  Fractures_set2_out.csv  Nodes_gozo_result.csv  library_test.py  spacing.py  test_geom_check.py
src/fracability/: AbstractClasses.py  Adapters.py  Entities.py  Plotters.py  __init__.py
tests/Survival_percentage_tests/: circle_test.py  survival_validation.py  test_lognormal.py  test_random_gen.py
tests/burr_test/: data.csv
tests/grid_tests/: grid_pesce.dbf  grid_pesce_grosso.dbf  grid_pesce_grosso.shp  grids_circle_fix.py
tests/scipy_stat_test/: exp_test.py  lognorm_test.py  norm_test.py
tests/survival_vis/: surv_vis.py
tmp/: .buildinfo  API reference.html  Introduction to fracture network analysis.html  Quickstart.html  Recommended resources.html  Tutorial reference.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
tmp/.doctrees/: API reference.doctree  Introduction to fracture network analysis.doctree  Quickstart.doctree  Recommended resources.doctree  Theory reference.doctree  Tutorial reference.doctree  environment.pickle  index.doctree
tmp/API/: Entities.html  Plotting.html  Statistic.html
tmp/Tutorials/: 1. Creating a FractureNetwork object.html  2. Calculate topology of a FractureNetwork.html  3. Plot a FracAbility entity.html
tmp/_sources/: Glossary.rst  Introduction to fracture network analysis.rst  Quickstart.rst  Recommended resources.rst  Tutorial reference.rst  index.rst
tmp/docs/: API reference.html  Introduction to fracture network analysis.html  Quickstart.html  Recommended resources.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
(+378 files in other folders)
