[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'FracAbility'
description = 'Analyse fracture networks for digitalized rock outcrops. '
authors = [
    {name = 'Gabriele Benedetti', email = 'gabri.benedetti@gmail.com'},
    {name = 'Stefano Casiraghi', email = 's.casiraghi21@campus.unimib.it'},
    {name = 'Daniela Bertacchi', email = 'daniela.bertacchi@unimib.it'},
    {name = 'Andrea Bistacchi', email = 'andrea.bistacchi@unimib.it'},
]
readme = 'README.md'
requires-python = '>=3.8'
keywords = ['DOM', 'censoring', 'fractures','fracture-networks', 'survival-analysis', 'reliability']
license = {text = 'AGPL-3.0 license '}
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: GNU Affero General Public License v3'
]
dependencies = [
    'pyvista',
    'networkx',
    'geopandas',
    'scipy',
    'python-ternary',
    'pyperclip',
    'pyqt5',
    'openpyxl',
    'seaborn',
    'trame',
    'jupyter'
]

dynamic = ['version']

[project.urls]
Documentation = 'https://fracability.readthedocs.io/en/latest/index.html'
"Bug Tracker" = 'https://github.com/gecos-lab/FracAbility/issues'
"Source Code" = 'https://github.com/gecos-lab/FracAbility'

[tool.setuptools.dynamic]
version = {attr = 'fracability.__version__'}

[tool.setuptools.packages.find]
include = [
    'fracability',
    'fracability.*',
]

[tool.setuptools.package-data]
"fracability.examples" = [
    '**',
    ]


[tool.isort]
profile = 'black'
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py39']
exclude='\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist|node_modules'

[tool.blackdoc]

line-length = 75


