[metadata]
name = FracAbility
description = Python toolbox used to analyse fracture networks for digitalized rock outcrops.
long_description_content_type = text/markdown
url = https://github.com/gbene/FracAbility
project_urls =
    Bug Tracker = https://github.com/gbene/FracAbility/issues
    Changelog = https://github.com/gbene/FracAbility/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: AGPL-3.0 License
    Intended Audience :: Science/Research
    Topic :: Other/Nonlisted Topic

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src