[metadata]
name = 'FracAbility'
author='Gabriele Benedetti'
author_email='gabri.benedetti@gmail.com'
description = 'Python toolbox used to analyse fracture networks for digitalized rock outcrops.'
long_description_content_type = text/markdown
url = 'https://github.com/gbene/FracAbility'
project_urls ={
    'Documentation': 'https://github.com/gbene/FracAbility/tree/main/docs'
    'Tracker': 'https://github.com/gbene/FracAbility/issues'
    'Changelog': 'https://github.com/gbene/FracAbility/releases'
    },
classifiers =[
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: AGPL-3.0 License',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis'
    ],
keywords='topology earth-science survival-analysis fracture-networks'
python_requires='>=3'
install_requires=['pyvista', 'networkx', 'geopandas', 'scipy']

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
