[metadata]
name = FracAbility
version = attr: my_package.VERSION
author = Gabriele Benedetti
author_email = gabri.benedetti@gmail.com
description = Python toolbox used to analyse fracture networks for digitalized rock outcrops.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = topology earth-science survival-analysis fracture-networks
url = https://github.com/gbene/FracAbility

classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: AGPL-3.0 License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis

project_urls =
    Documentation = https://github.com/gbene/FracAbility/tree/main/docs
    Tracker = https://github.com/gbene/FracAbility/issues
    Changelog = https://github.com/gbene/FracAbility/releases
    

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pyvista
    networkx
    geopandas
    scipy


[options.packages.find]
where = src
